# ComfyUI-SSREncoder

./: .gitignore  README.md  __init__.py  pyproject.toml
example_workflows/: ssr_example.json
modules/: clip_vision_override.py  ssr_modules.py
nodes/: apply_ssr_attention_node.py  encode_ssr_query_node.py  load_ssr_aligner_node.py  load_ssr_attention_node.py
